# kestrel

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  kestrel.example.loadout.toml  kestrel.example.toml
.github/workflows/: ci.yml
console/: README.md  index.html  package-lock.json  package.json  vite.config.ts
console/scripts/: check-i18n.mjs
console/src/: index.css  main.tsx
console/src/app/: app-shell.tsx  sidebar.tsx  topbar.tsx
console/src/features/chat/: chat-view.tsx  conversation.tsx  markdown.tsx
console/src/features/launcher/: launcher-view.tsx  strings.ts
console/src/features/sessions/: sessions-view.tsx
console/src/features/settings/: settings-view.tsx
console/src/i18n/: en-US.json  index.ts  zh-CN.json
console/src/lib/: client.ts  store.ts  types.ts  use-health.ts
crates/kestrel-backend/: Cargo.toml
crates/kestrel-backend/src/: lib.rs  llamacpp.rs  lmstudio.rs  openai_compat.rs  probe.rs
crates/kestrel-cli/: Cargo.toml
crates/kestrel-cli/src/: i18n.rs  main.rs  repl.rs
crates/kestrel-core/: Cargo.toml
crates/kestrel-core/src/: agent.rs  crew.rs  ledger.rs  lib.rs  permission.rs  tools.rs
crates/kestrel-core/src/ports/: backend.rs  mod.rs  store.rs  tool.rs
crates/kestrel-core/tests/: loop_foundations.rs  loop_smoke.rs
crates/kestrel-protocol/: Cargo.toml
crates/kestrel-protocol/src/: completion.rs  error.rs  event.rs  lib.rs  message.rs  op.rs  risk.rs  secret.rs  tool_spec.rs
crates/kestrel-runtime/: Cargo.toml
crates/kestrel-runtime/src/: detect.rs  discover.rs  error.rs  lib.rs  models.rs  spec.rs  supervisor.rs
crates/kestrel-server/: Cargo.toml
crates/kestrel-server/src/: http.rs  launcher.rs  main.rs
crates/kestrel-store/: Cargo.toml
crates/kestrel-store/src/: config.rs  jsonl.rs  lib.rs  loadout.rs  paths.rs  profile.rs
crates/kestrel-store/tests/: replay.rs
crates/kestrel-tools/: Cargo.toml
crates/kestrel-tools/src/: fs.rs  lib.rs  read.rs  registry.rs  search.rs  shell.rs  util.rs
docs/: README.md  architecture.md  innovation-brainstorm.md  vision.md  webui-v1-plan.md
docs/adr/: 0001-language-rust.md  0002-style-library-core-event-stream.md  0003-rejected-alternatives.md  0004-inverted-cost-model.md  0005-capability-disclosure.md  0006-loadout-declarative-build.md  0007-webui-browser-axum.md  0008-i18n-localization.md  0009-storage-layout.md  0010-model-launcher.md  0011-event-log-forward-compat.md  README.md
docs/planning/: README.md  foundations.md  roadmap-board.md  webui-v1-plan.md
docs/research/: 2026-07-heavy-agent-lessons.md  2026-07-local-backend-engineering.md  2026-07-rust-agent-landscape.md  README.md
profiles/: README.md
tests/replays/: README.md  auth_refactor.jsonl
