[package]
name = "kestrel-backend"
description = "LlmBackend 端口实现：llama.cpp / LM Studio / OpenAI 兼容兜底。唯一碰 LLM HTTP 的 crate。"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# 边界纪律：依赖 core（实现其端口）+ protocol + HTTP 客户端。
# 禁止：其他适配器 crate、前端 crate。
kestrel-core = { workspace = true }
kestrel-protocol = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[lints]
workspace = true
