[package]
name = "kestrel-server"
description = "Kestrel WebUI backend: axum adapter streaming Events over SSE and accepting Ops."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "kestrel-server"
path = "src/main.rs"

[dependencies]
# Second frontend adapter (peer to kestrel-cli): assemble core + adapters,
# stream Events over SSE, accept Ops over HTTP. All decisions stay in core.
kestrel-core = { workspace = true }
kestrel-protocol = { workspace = true }
kestrel-backend = { workspace = true }
kestrel-tools = { workspace = true }
kestrel-store = { workspace = true }
kestrel-runtime = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "net",
    "fs",
] }
tokio-stream = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
